extras/kustomize/base/network-policy.yaml
# Copyright (C) 2022 - present Juergen Zimmermann, Hochschule Karlsruhe
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

---
apiVersion: networking.k8s.io/v1
# https://kubernetes.io/docs/concepts/services-networking/network-policies
kind: NetworkPolicy
metadata:
  name: buchweb
spec:
  podSelector:
    matchLabels:
      app: buchweb
      app.kubernetes.io/name: buchweb
  policyTypes: [Ingress, Egress]
  egress:
    - ports:
        # buch
        - port: 3000
          protocol: TCP
  ingress: []
